<resources>
    <string name="app_name">Task App</string>

    <string name="logout">Logout</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="connection_error">Connection Error</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in_or_register">Sign in or register</string>
    <string name="sign_in"><u>Sign in</u></string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="age">Age</string>
    <string name="dob">Date of Birth</string>
    <string name="fullname_error">Enter Proper Full Name</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="email_error">Enter Proper Email</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="password_error">Enter Proper Password(min. 6 characters)</string>
    <string name="age_error">Enter Proper Age</string>
    <string name="dob_error">Enter Proper Date of Birth</string>
    <string name="something_went_wrong_error"> Oops! Something Went Wrong</string>
    <string name="home">Home</string>
    <string name="user_added_successfully">User Added Successfully</string>
    <string name="task_added_successfully">Task Added Successfully</string>
    <string name="loading">Loading…</string>
    <string name="login_successful">Login Successful</string>
    <string name="checking_credentials">Checking Credentials</string>
    <string name="user_not_exist">User Does Not Exist</string>
    <string name="label_name">Name:</string>
    <string name="label_age">Age:</string>
    <string name="label_dob">Dob:</string>
    <string name="light">Light</string>
    <string name="mode">Mode</string>
    <string name="write_your_task_here">Write Your Task Here</string>
    <string name="add">Add</string>
    <string name="floatingButton">floatingButton</string>
    <string name="refresh">Refresh</string>
    <string name="signout">SignOut</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="account">Account</string>
    <string name="tasks">Tasks</string>
    <string name="signout_success">SignOut Successfully</string>


</resources>