<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg_color"
        tools:context=".register.RegisterActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/register"
                    android:textSize="@dimen/big_textSize"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFullName"
                    style="@style/CommonEditTextStyle"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/full_name"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtRegister" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    style="@style/CommonEditTextStyle"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtFullName" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPass"
                    style="@style/CommonEditTextStyle"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/password"
                    android:maxLength="6"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtEmail" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtAge"
                    style="@style/CommonEditTextStyle"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:digits="1234567890"
                    android:maxLength="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtPass" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDob"
                    style="@style/CommonEditTextStyle"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/dob"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtAge" />



                <Button
                    android:id="@+id/btnSignUp"
                    style="@style/ButtonStyle"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtDob" />

                <TextView
                    android:id="@+id/LabelAlreadyHave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/already_have_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/subtitle_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/btnSignUp"
                    android:layout_marginStart="@dimen/_40sdp"
                    app:layout_constraintTop_toBottomOf="@id/btnSignUp" />

                <TextView
                    android:id="@+id/txtSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/sign_in"
                    android:textColor="@color/button_bg_color"
                    android:textSize="@dimen/subtitle_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/LabelAlreadyHave"
                    app:layout_constraintTop_toBottomOf="@id/btnSignUp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>