<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg_color"
        tools:context=".login.LoginActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clRoot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtSign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/welcome_back"
                    android:textColor="@color/white"
                    android:textSize="@dimen/medium_textSize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

                <TextView
                    android:id="@+id/txtWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/big_textSize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    style="@style/CommonEditTextStyle"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:background="@drawable/bg_edt_email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtSign" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPass"
                    style="@style/CommonEditTextStyle"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@drawable/bg_edt_password"
                    android:hint="@string/password"
                    android:maxLength="6"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtEmail" />



                <Button
                    android:id="@+id/btnSignIn"
                    style="@style/ButtonStyle"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/edtPass"
                    app:layout_constraintTop_toBottomOf="@id/edtPass" />

                <TextView
                    android:id="@+id/txtAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/subtitle_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/btnSignIn"
                    app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/sign_up"
                    android:textColor="@color/button_bg_color"
                    android:textSize="@dimen/subtitle_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/txtAccount"
                    app:layout_constraintTop_toBottomOf="@id/btnSignIn" />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>