<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_5sdp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:cardElevation="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_red">

                <TextView
                    android:id="@+id/labelName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:ellipsize="end"
                    android:paddingTop="@dimen/_2sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/label_name" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:minLines="1"
                    android:paddingTop="@dimen/_2sdp"
                    android:text="@string/label_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title_text_size"
                    app:layout_constraintStart_toEndOf="@id/labelName"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/labelAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:minLines="1"
                    android:text="@string/label_age"
                    android:textColor="@color/black"
                    android:textSize="@dimen/subtitle_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtName" />


                <TextView
                    android:id="@+id/txtAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:minLines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/subtitle_text_size"
                    app:layout_constraintStart_toEndOf="@id/labelAge"
                    app:layout_constraintTop_toBottomOf="@+id/txtName"
                    tools:text="Age" />

                <TextView
                    android:id="@+id/labelDob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:ellipsize="end"
                    android:minLines="1"
                    android:paddingBottom="@dimen/_2sdp"
                    android:text="@string/label_dob"
                    android:textColor="@color/black"
                    android:textSize="@dimen/subtitle_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtAge" />


                <TextView
                    android:id="@+id/txtDateOfBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:ellipsize="end"
                    android:minLines="1"
                    android:paddingBottom="@dimen/_2sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/subtitle_text_size"
                    app:layout_constraintStart_toEndOf="@id/labelDob"
                    app:layout_constraintTop_toBottomOf="@+id/txtAge"
                    tools:text="Date of Birth" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>